--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,15 +1,17 @@
-// @font-face {
-//   font-family: 'Montserrat';
-//   font-style: normal;
-//   font-weight: 400;
-//   font-display: swap;
-//   src:
-//     local('Montserrat'),
-//     url('./../assets/fonts/woff2/Montserrat-Regular.woff2') format('woff2'),
-//     url('./../assets/fonts/woff/Montserrat-Regular.woff') format('woff'),
-//     url('./../assets/fonts/ttf/Montserrat-Regular.ttf') format('ttf');
-// }
+@font-face {
+  font-family: 'CreatoDisplay';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src:
+    local('CreatoDisplay'),
+    url('../assets/fonts/CreatoDisplay-Thin.woff2') format('woff2'),
+    url('../assets/fonts/CreatoDisplay-Thin.woff') format('woff'),
+    url('../assets/fonts/CreatoDisplay-Thin.ttf') format('ttf');
+}
 
+
+//TODO закинуть файлы монтсеррат
 // @font-face {
 //   font-family: 'Montserrat';
 //   font-style: normal;
