button ui component

--- a/src/modules/todos/components/todosFilter/TodosFilter.module.scss
+++ b/src/modules/todos/components/todosFilter/TodosFilter.module.scss
@@ -1,8 +1,4 @@
-.button {
-  position: relative;
-  border: none;
-
-  &_active {
-    border: 1px solid black;
-  }
+.filters{
+  display: flex;
+  gap: 10px;
 }
