--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,9 +8,11 @@ $xxl: 1600px;
 //---------------------Colors----------------------
 $mainBg: rgb(245, 245, 245);
 $titleColor: rgb(233, 218, 217);
+$primaryColor: rgba(0, 0, 0, 0.15);
 $loaderColor: black;
 //--------------------Fonts-------------------------
 $titleFont: 'CreatoDisplay', sans-serif;
+$buttonFont: 'CreatoDisplay', sans-serif;
 $titleFontSize: 1.5rem;
 $textFont: 'Montserrat', sans-serif;
 $textFontSize: 1rem;
