--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -2,15 +2,18 @@
 
 .button {
   position: relative;
-  background-color: white;
   border: 1px solid transparent;
   border-radius: 5px;
   font-family: v.$buttonFont;
-  font-size: 1.1rem;
-  padding: 0.125rem .5rem;
+  padding: 0.125rem 0.5rem;
   font-weight: 300;
   color: black;
+  background-color: white;
+  cursor: pointer;
 
+  &:hover {
+    font-weight: bold;
+  }
   &_active {
     border: 1px solid v.$primaryColor;
   }
