--- a/src/ui/input/Input.module.scss
+++ b/src/ui/input/Input.module.scss
@@ -1,11 +1,32 @@
 @use '@styles/variables' as v;
 
+.wrapper {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
 .input {
   position: relative;
   width: 100%;
   height: 100%;
   min-height: 50px;
+  padding: 0px 10px;
   border: none;
+  font-style: italic;
   font-family: v.$textFont;
   font-size: v.$textFontSize;
+
+  &::placeholder{
+    color: v.$primaryColor;
+  }
+}
+
+$iconSize: 24px;
+.icon {
+  width: $iconSize;
+  height: $iconSize;
+  fill: v.$primaryColor;
+  pointer-events: none;
 }
