--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $mainBg: rgb(245, 245, 245);
 $titleColor: rgb(233, 218, 217);
 $primaryColor: rgba(0, 0, 0, 0.25);
 $loaderColor: black;
+$hoverColor: rgba(0, 0, 0, 0.05);
 //--------------------Fonts-------------------------
 $titleFont: 'CreatoDisplay', sans-serif;
 $buttonFont: 'CreatoDisplay', sans-serif;
