--- a/src/ui/input/Input.module.scss
+++ b/src/ui/input/Input.module.scss
@@ -5,6 +5,8 @@
   width: 100%;
   display: flex;
   align-items: center;
+  padding: 0 10px;
+  gap: 15px;
 }
 
 .input {
@@ -12,19 +14,20 @@
   width: 100%;
   height: 100%;
   min-height: 50px;
-  padding: 0px 10px;
   border: none;
   font-style: italic;
   font-family: v.$textFont;
   font-size: v.$textFontSize;
 
-  &::placeholder{
+  &::placeholder {
     color: v.$primaryColor;
   }
 }
 
-$iconSize: 24px;
+$iconSize: 32px;
 .icon {
+  display: flex;
+  flex: 0 0 auto;
   width: $iconSize;
   height: $iconSize;
   fill: v.$primaryColor;
