--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,9 +8,11 @@ $xxl: 1600px;
 //---------------------Colors----------------------
 $mainBg: rgb(245, 245, 245);
 $titleColor: rgb(233, 218, 217);
+$textColor: rgb(0, 0, 0);
 $primaryColor: rgba(0, 0, 0, 0.25);
 $loaderColor: black;
 $hoverColor: rgba(0, 0, 0, 0.05);
+$dangerColor: rgb(250, 38, 38);
 //--------------------Fonts-------------------------
 $titleFont: 'CreatoDisplay', sans-serif;
 $buttonFont: 'CreatoDisplay', sans-serif;
