--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -7,7 +7,7 @@
   font-family: v.$buttonFont;
   padding: 0.125rem 0.5rem;
   font-weight: 300;
-  color: black;
+  color: v.$textColor;
   background-color: white;
   cursor: pointer;
 
