--- a/src/ui/checkbox/Checkbox.module.scss
+++ b/src/ui/checkbox/Checkbox.module.scss
@@ -10,6 +10,9 @@
       opacity: 1;
     }
   }
+  &:hover .checkbox__item::before {
+    background: v.$hoverColor;
+  }
 
   &__item {
     position: relative;
