Card плавное изменение высоты

--- a/src/modules/todos/components/todosItem/TodosItem.module.scss
+++ b/src/modules/todos/components/todosItem/TodosItem.module.scss
@@ -26,6 +26,7 @@ $iconSize: 26px;
   width: $iconSize;
   height: $iconSize;
   fill: v.$primaryColor;
+  cursor: pointer;
 
   &:hover {
     color: v.$dangerColor;
